<resources>
    <string name="app_name">Musictext</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="artists_selection_title">Select favourite artists</string>
    <string name="main_menu_title">Main menu</string>
    <string name="create_user_text">Create user</string>
    <string name="modify_user_text">Modify user\'s favourite artist</string>
    <string name="create_user_title">User creation</string>
    <string name="user_name_hint">Insert user name</string>
    <string name="user_created">User created</string>
    <string name="user_created_text">User succesfully created</string>
    <string name="user_modified">User modified</string>
    <string name="user_modified_text">User succesfully modified</string>
    <string name="user_not_created">User not created</string>
    <string name="user_name_short">User name too short or already existent</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="waiting">Please wait</string>
    <string name="suggest_button_text">Suggest</string>
    <string name="observations_title">Insert observations</string>
    <string name="confirm_observations">OK</string>
    <string name="suggest_title">Suggestions:</string>
    <string name="back_main_menu">Main menu</string>
    <string name="max_artists_title">Max artists</string>
    <string name="max_tracks">Max tracks</string>
</resources>
