<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff66bb6a">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_title_selection"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="10dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_menu_title"
                android:id="@+id/textView"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="400dp"
        android:layout_height="500dp"
        card_view:cardCornerRadius="3dp"
        android:elevation="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_user_text"
                android:id="@+id/createUserButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="104dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/modify_user_text"
                android:id="@+id/modifyUserButton"
                android:layout_below="@+id/createUserButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggest_button_text"
                android:id="@+id/suggestButton"
                android:layout_below="@+id/modifyUserButton"
                android:layout_alignLeft="@+id/modifyUserButton"
                android:layout_alignStart="@+id/modifyUserButton"
                android:layout_alignRight="@+id/modifyUserButton"
                android:layout_alignEnd="@+id/modifyUserButton" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>